[package]
name = "robota"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "A framework for controlling machines in the real world"
repository = "https://github.com/ZortacDev/robota/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
